# mini-git

./: .gitignore  CMakeLists.txt  README.MD
include/: CLI.hpp  CommitHandler.hpp  DatabaseManager.hpp  FileSystem.hpp
src/: main.cpp
